--- a/stepx_product_detail.html
+++ b/stepx_product_detail.html
@@ -50,8 +50,10 @@
 
   <!-- Right: Product Info -->
   <div class="right-column">
-    <h1 id="product-title" class="product-title"></h1>
-    <p id="product-price" class="product-price"></p>
+    <div class="product-header">
+      <h1 id="product-title" class="product-title"></h1>
+      <p id="product-price" class="product-price"></p>
+    </div>
 
     <label class="size-label">Select Size</label>
     <div id="sizes-container" class="sizes-container">
